--- a/views/pages/inv_GPU.ejs
+++ b/views/pages/inv_GPU.ejs
@@ -21,32 +21,32 @@
 
       <label for="companyName" class="form-label">Company Name:</label>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="AMD, Nvidia, etc..." aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="AMD, Nvidia, etc..." aria-label="Company Name" aria-describedby="basic-addon1">
       </div>
 
       <label for="gpuModel" class="form-label">GPU Model:</label>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Model name..." aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="Model name..." aria-label="GPU Model" aria-describedby="basic-addon1">
       </div>
 
       <label for="gProcessor" class="form-label">Graphic Processor:</label>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Processor Name..." aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="Processor Name..." aria-label="Graphic Processor" aria-describedby="basic-addon1">
       </div>
 
       <label for="gCORES" class="form-label">CORES:</label>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="No. of CORES..." aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="No. of CORES..." aria-label="CORES" aria-describedby="basic-addon1">
       </div>
 
       <label for="memorySize" class="form-label">Memory Size:</label>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Size..." aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="Size..." aria-label="Memory Size" aria-describedby="basic-addon1">
       </div>
 
       <label for="memoryType" class="form-label">Memory Type:</label>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Type..." aria-label="Username" aria-describedby="basic-addon1">
+        <input type="text" class="form-control" placeholder="Type..." aria-label="Memory Type" aria-describedby="basic-addon1">
       </div>
 
       <label for="gDetails" class="form-label">Details:</label>
