--- a/views/pages/inv_GPU.ejs
+++ b/views/pages/inv_GPU.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <%- include('../partials/head'); %>
-    <link rel="stylesheet" href="../inv_GPU.css">
   </head>
   <body>
 
-    <div class="container">
+    <div class="container content-center">
       <div class="jumbotron">
 
         <h1>WELCOME</h1>
@@ -16,47 +16,9 @@
     </div>
 
     <div class="container">
-    <form action="/add" method="POST">
 
-      <label for="companyName" class="form-label">Company Name:</label>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="AMD, Nvidia, etc..." aria-label="Company Name" aria-describedby="basic-addon1" required>
-      </div>
+    <%- include('../partials/add'); %>
 
-      <label for="gpuModel" class="form-label">GPU Model:</label>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Model name..." aria-label="GPU Model" aria-describedby="basic-addon1" required>
-      </div>
-
-      <label for="gProcessor" class="form-label">Graphic Processor:</label>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Processor Name..." aria-label="Graphic Processor" aria-describedby="basic-addon1" required>
-      </div>
-
-      <label for="gCORES" class="form-label">CORES:</label>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="No. of CORES..." aria-label="CORES" aria-describedby="basic-addon1" required>
-      </div>
-
-      <label for="memorySize" class="form-label">Memory Size:</label>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Size..." aria-label="Memory Size" aria-describedby="basic-addon1" required>
-      </div>
-
-      <label for="memoryType" class="form-label">Memory Type:</label>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Type..." aria-label="Memory Type" aria-describedby="basic-addon1" required>
-      </div>
-
-      <label for="gDetails" class="form-label">Details:</label>
-      <div class="input-group mb-3">
-        <textarea class="form-control" aria-label="With textarea" required></textarea>
-      </div>
-
-      <button type="reset" id="cancelBtn" class="btn btn-primary">Cancel</button>
-      <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
-
-    </form>
     </div>
 
     <script type="text/javascript" src="inv_GPU.js"></script>
