--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,4 @@
 <meta charset="utf-8">
 <title>GPU Inventory</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"><meta charset="utf-8">
+<link href="/pages/inv_GPU.css" rel="stylesheet" type="text/css">
