--- a/views/partials/add.ejs
+++ b/views/partials/add.ejs
@@ -4,7 +4,7 @@
 
   <label for="companyName" class="form-label">Company Name:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="AMD, Nvidia, etc..." aria-label="Company Name" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" name="uname" placeholder="AMD, Nvidia, etc..." aria-label="Company Name" aria-describedby="basic-addon1" required>
   </div>
 
   <label for="gpuModel" class="form-label">GPU Model:</label>
