--- a/views/partials/add.ejs
+++ b/views/partials/add.ejs
@@ -4,37 +4,37 @@
 
   <label for="companyName" class="form-label">Company Name:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" name="uname" placeholder="AMD, Nvidia, etc..." aria-label="Company Name" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" placeholder="AMD, Nvidia, etc..." name="company" aria-describedby="basic-addon1" required>
   </div>
 
   <label for="gpuModel" class="form-label">GPU Model:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Model name..." aria-label="GPU Model" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" placeholder="Model name..." name="model" aria-describedby="basic-addon1" required>
   </div>
 
   <label for="gProcessor" class="form-label">Graphic Processor:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Processor Name..." aria-label="Graphic Processor" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" placeholder="Processor Name..." name="processor" aria-describedby="basic-addon1" required>
   </div>
 
   <label for="gCORES" class="form-label">CORES:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="No. of CORES..." aria-label="CORES" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" placeholder="No. of CORES..." name="cores" aria-describedby="basic-addon1" required>
   </div>
 
   <label for="memorySize" class="form-label">Memory Size:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Size..." aria-label="Memory Size" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" placeholder="Size..." name="size" aria-describedby="basic-addon1" required>
   </div>
 
   <label for="memoryType" class="form-label">Memory Type:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Type..." aria-label="Memory Type" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" placeholder="Type..." name="type" aria-describedby="basic-addon1" required>
   </div>
 
   <label for="gDetails" class="form-label">Details:</label>
   <div class="input-group mb-3">
-    <textarea class="form-control" aria-label="With textarea" required></textarea>
+    <textarea class="form-control" name="textarea" required></textarea>
   </div>
 
   <button type="reset" id="cancelBtn" class="btn btn-primary">Cancel</button>
