Adding user database

--- a/views/pages/GPU Inventory/delete_GPU.ejs
+++ b/views/pages/GPU Inventory/delete_GPU.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <%- include('../partials/user_Database/'); %>
+    <%- include('../../partials/gpu_Database/head'); %>
   </head>
   <body>
 
@@ -17,7 +17,7 @@
 
     <div class="container">
 
-    <%- include('../partials/user_Database/'); %>
+    <%- include('../../partials/gpu_Database/delete'); %>
 
     </div>
 
