--- a/views/partials/gpu_Database/delete.ejs
+++ b/views/partials/gpu_Database/delete.ejs
@@ -1,6 +1,6 @@
-<form action="/delete" method="POST">
+<form action="/gpu/delete" method="POST">
 
-  <h3>Delete an Entry to the inventory:</h3>
+  <h3>Delete an Entry from the inventory:</h3>
 
   <label for="companyName" class="form-label">Company Name:</label>
   <div class="input-group mb-3">
