--- a/views/partials/user_Database/view.ejs
+++ b/views/partials/user_Database/view.ejs
@@ -1,10 +1,10 @@
-<form action="/gpu/view" method="POST">
+<form action="/user/view" method="POST">
 
   <h3>View an Entry to the inventory:</h3>
 
-  <label for="gpuModel" class="form-label" required>GPU Model:</label>
+  <label for="userName" class="form-label">Name:</label>
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Model name..." aria-label="GPU Model" aria-describedby="basic-addon1" required>
+    <input type="text" class="form-control" placeholder="John Smith..." name="uName" aria-describedby="basic-addon1" required>
   </div>
 
   <button type="reset" id="cancelBtn" class="btn btn-primary">Cancel</button>
