--- a/views/partials/gpu_Database/update.ejs
+++ b/views/partials/gpu_Database/update.ejs
@@ -37,7 +37,7 @@
     <textarea class="form-control" aria-label="With textarea" required></textarea>
   </div>
 
-  <button type="reset" id="cancelBtn" class="btn btn-primary">Cancel</button>
+  <button type="reset" id="cancelBtn" class="btn btn-primary">Reset</button>
   <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
 
 </form>
