--- a/views/pages/User Database/update_Users.ejs
+++ b/views/pages/User Database/update_Users.ejs
@@ -19,9 +19,11 @@
 
     <%- include('../../partials/user_Database/update'); %>
 
+    <a href="./"><button class="btn btn-primary" name="gback">BACK</button></a>
+
     </div>
 
-    <script type="text/javascript" src="inv_GPU.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
   </body>
 </html>
