--- a/views/partials/user_Database/add.ejs
+++ b/views/partials/user_Database/add.ejs
@@ -12,7 +12,7 @@
     <input type="email" class="form-control" placeholder="abc@def.com..." name="uEmail" aria-describedby="basic-addon1" required>
   </div>
 
-  <button type="reset" id="cancelBtn" class="btn btn-primary">Cancel</button>
+  <button type="reset" id="cancelBtn" class="btn btn-primary">Reset</button>
   <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
 
 </form>
