--- a/views/partials/user_Database/view.ejs
+++ b/views/partials/user_Database/view.ejs
@@ -7,7 +7,7 @@
     <input type="text" class="form-control" placeholder="John Smith..." name="uName" aria-describedby="basic-addon1" required>
   </div>
 
-  <button type="reset" id="cancelBtn" class="btn btn-primary">Cancel</button>
+  <button type="reset" id="cancelBtn" class="btn btn-primary">Reset</button>
   <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
 
 </form>
