--- a/views/addNewUser.ejs
+++ b/views/addNewUser.ejs
@@ -14,7 +14,7 @@
 
 <div class="Container container-sm">
 
-    <form method="post">
+    <form action="/users/add-user" method="POST" id="add_user">
         <div class="new_user">
 
             <div class="form-group">
@@ -38,21 +38,17 @@
                     <input type="radio" id="radio-2" name="gender" value="Female">
                     <label for="radio-2" class="radio-label">Female</label>
                 </div>
-                <div class="radio inline">
-                    <input type="radio" id="radio-3" name="gender" value="Other">
-                    <label for="radio-3" class="radio-label">Other</label>
-                </div>
             </div>
 
             <div class="form-group">
                 <label for="status" class="text-light">Status</label>
                 <div class="radio inline">
-                    <input type="radio" id="radio-4" name="gender" value="Male">
-                    <label for="radio-4" class="radio-label">Employed</label>
+                    <input type="radio" id="radio-3" name="employed" value="Employed">
+                    <label for="radio-3" class="radio-label">Employed</label>
                 </div>
                 <div class="radio inline">
-                    <input type="radio" id="radio-5" name="gender" value="Female">
-                    <label for="radio-5" class="radio-label">Unemployed</label>
+                    <input type="radio" id="radio-4" name="unemployed" value="Unemployed">
+                    <label for="radio-4" class="radio-label">Unemployed</label>
                 </div>
             </div>
 
