--- a/views/include/_showData.ejs
+++ b/views/include/_showData.ejs
@@ -3,28 +3,28 @@
     <thead class="thead-dark">
     <tr>
         <th>#</th>
-        <th style="width:40%">NAME/USERS</th>
-        <th style="width:40%">EMAIL</th>
-        <th style="width:20%">ACTION</th>
+        <th style="width:30%">NAME/USERS</th>
+        <th style="width:30%">EMAIL</th>
+        <th style="width:40%">ACTION</th>
     </tr>
     </thead>
 
     <tbody>
 
-    <%= data %>
+    <% for (var i = 0; i < users.length; i++) { %>
 
     <tr>
-        <td>{{ loop.counter }}</td>
-        <td>{{ eachUser.first_name }} {{ eachUser.second_name }}</td>
-        <td>{{ user email}}</td>
+        <td><%= i + 1%></td>
+        <td><%= users[i].Name %></td>
+        <td><%= users[i].Email %></td>
         <td>
-            <a href=""><button type="submit" id="viewBtn" class="btn btn-primary mr-2">View</button></a>
-            <a href=""><button type="submit" id="editBtn" class="btn btn-primary btn-dark mr-2">Edit</button></a>
+            <a href=`/users/view-user/` <% users.id %>><button type="submit" id="viewBtn" class="btn btn-primary mr-1">View</button></a>
+            <a href=""><button type="submit" id="editBtn" class="btn btn-primary btn-dark mr-1">Edit</button></a>
             <a href=""><button type="submit" id="deleteBtn" class="btn btn-primary btn-danger">Delete</button></a>
         </td>
     </tr>
 
-    {% end-for %}
+    <% } %>
 
     </tbody>
 
