--- a/views/selectedUserInfo.ejs
+++ b/views/selectedUserInfo.ejs
@@ -17,16 +17,15 @@
     </div>
 </div>
 
-{% if user %}
 <div class="Container container-sm">
 
     <ol>
-        <li>Name: {{ user.first_name }} {{ user.second_name }}</li>
-        <li>Email: {{ user.email }}</li>
-        <li>Company: {{ user.company }}</li>
+        <li><% user.Name %></li>
+        <li><% user.Email %></li>
+        <li><% user.Gender %></li>
+        <li><% user.Status %></li>
     </ol>
 
 </div>
-{% endif %}
 
 <%- include('include/_footer') %>
