--- a/views/usersInfoPage.ejs
+++ b/views/usersInfoPage.ejs
@@ -11,7 +11,7 @@
 
     <div class="Container container-sm text-center">
 
-        <a href="/users/add-user"><button type="submit" id="cancelBtn" class="btn btn-primary">Add</button></a>
+        <a href="/users/add_user"><button type="submit" id="cancelBtn" class="btn btn-primary">Add</button></a>
         <a href="/"><button type="submit" id="submitBtn" class="btn btn-primary">BACK</button></a>
 
     </div>
