fixing add user functionality

--- a/views/include/_showData.ejs
+++ b/views/include/_showData.ejs
@@ -15,8 +15,8 @@
 
     <tr>
         <td><%= i + 1%></td>
-        <td><%= users[i].Name %></td>
-        <td><%= users[i].Email %></td>
+        <td><%= users[i].name %></td>
+        <td><%= users[i].email %></td>
         <td>
             <a href=`/users/view-user/` <% users.id %>><button type="submit" id="viewBtn" class="btn btn-primary mr-1">View</button></a>
             <a href=""><button type="submit" id="editBtn" class="btn btn-primary btn-dark mr-1">Edit</button></a>
