edit and delete functionality in progress

--- a/views/addNewUser.ejs
+++ b/views/addNewUser.ejs
@@ -5,7 +5,7 @@
     <div class="container text-center">
 
         <h1>WELCOME</h1>
-        <h3>ADDING A NEW USER</h3>
+        <h3>--- ADDING A NEW USER ---</h3>
 
         <a href="/users"><button class="btn btn-primary">BACK</button></a>
 
