--- a/views/selectedUserInfo.ejs
+++ b/views/selectedUserInfo.ejs
@@ -2,10 +2,10 @@
 <%- include('include/_header') %>
 
 <div class="jumbotron">
-    <div class="container">
+    <div class="container text-center">
 
         <h1>WELCOME</h1>
-        <h3>USER INFORMATION</h3>
+        <h3>--- USER INFORMATION ---</h3>
 
     </div>
 
