--- a/views/usersInfoPage.ejs
+++ b/views/usersInfoPage.ejs
@@ -5,7 +5,7 @@
     <div class="container text-center">
 
         <h1>WELCOME</h1>
-        <h3>USERS INVENTORY PAGE</h3>
+        <h3>--- USERS INVENTORY PAGE ---</h3>
 
     </div>
 
