--- a/views/editUserInfo.ejs
+++ b/views/editUserInfo.ejs
@@ -5,21 +5,25 @@
     <div class="container text-center">
 
         <h1>WELCOME</h1>
-        <h3>ADDING A NEW USER</h3>
+        <h3>--- EDIT SELECTED USER ---</h3>
 
-        <a href="/users"><button type="submit" id="submitBtn" class="btn btn-primary">BACK</button></a>
+        <a href="/users"><button class="btn btn-primary">BACK</button></a>
 
     </div>
 </div>
 
 <div class="Container container-sm">
 
-    <form action=" <%= "/users/update-user/" + user.id %> " method="POST">
+    <form action=" <%= "/users/update-user/" + user.id %> " method="POST" id="update_user">
 
-        <%- include('include/_form')  %>
+
+        <%- include('include/_editForm', {data: 'user'}); %>
+
+        <input type="submit" class="btn btn-primary" value="SUBMIT">
+        <input type="reset" class="btn btn-primary" value="RESET">
 
     </form>
 
 </div>
 
-<%- include('include/_header') %>
+<%- include('include/_footer') %>
