--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -1,21 +1,21 @@
 <div class="form-group">
     <label for="name" class="text-bold">Name:</label>
-    <input type="text" id="name" name="name" placeholder="John Wick">
+    <input type="text" id="name" name="name" value="<%= user.name %>" placeholder="John Wick">
 </div>
 
 <div class="form-group">
     <label for="email" class="text-bold">Email:</label>
-    <input type="email" id="email" name="email" placeholder="example@gmail.com">
+    <input type="email" id="email" name="email" value="<%= user.email %>" placeholder="example@gmail.com">
 </div>
 
 <div class="form-group">
     <label for="gender" class="text-bold">Gender:</label>
     <div class="radio inline">
-        <input type="radio" id="radio-1" name="gender" value="Male">
+        <input type="radio" id="radio-1" name="gender" value="Male" <%= user.gender === 'Male' ? 'checked' : ''%> >
         <label for="radio-1" class="radio-label">Male</label>
     </div>
     <div class="radio inline">
-        <input type="radio" id="radio-2" name="gender" value="Female">
+        <input type="radio" id="radio-2" name="gender" value="Female" <%= user.gender === 'Female' ? 'checked' : ''%> >
         <label for="radio-2" class="radio-label">Female</label>
     </div>
 </div>
@@ -23,14 +23,11 @@
 <div class="form-group">
     <label for="status" class="text-bold">Status:</label>
     <div class="radio inline">
-        <input type="radio" id="radio-3" name="status" value="Employed">
+        <input type="radio" id="radio-3" name="status" value="Employed" <%= user.status === 'Employed' ? 'checked' : ''%> >
         <label for="radio-3" class="radio-label">Employed</label>
     </div>
     <div class="radio inline">
-        <input type="radio" id="radio-4" name="status" value="Unemployed">
+        <input type="radio" id="radio-4" name="status" value="Unemployed" <%= user.status === 'Unemployed' ? 'checked' : ''%> >
         <label for="radio-4" class="radio-label">Unemployed</label>
     </div>
 </div>
-
-<input type="submit" class="btn btn-primary" value="SUBMIT">
-<input type="reset" class="btn btn-primary" value="RESET">
