update and delete complete

--- a/views/selectedUserInfo.ejs
+++ b/views/selectedUserInfo.ejs
@@ -11,7 +11,7 @@
 
     <div class="Container container-sm text-center">
 
-        <a href="/users/update-user"><button class="btn btn-primary">Edit</button></a>
+        <a href=" <%= "/users/update-user/" + user.id %> "><button class="btn btn-primary">Edit</button></a>
         <a href="/users"><button class="btn btn-primary">BACK</button></a>
 
     </div>
