--- a/views/include/_showData.ejs
+++ b/views/include/_showData.ejs
@@ -3,9 +3,11 @@
     <thead class="thead-dark">
     <tr>
         <th>#</th>
-        <th style="width:30%">NAME/USERS</th>
-        <th style="width:30%">EMAIL</th>
-        <th style="width:40%">ACTION</th>
+        <th style="width:20%">NAME/USERS</th>
+        <th style="width:20%">EMAIL</th>
+        <th style="width:10%">GENDER</th>
+        <th style="width:20%">STATUS</th>
+        <th style="width:30%">ACTION</th>
     </tr>
     </thead>
 
@@ -17,6 +19,8 @@
         <td><%= i + 1%></td>
         <td><%= users[i].name %></td>
         <td><%= users[i].email %></td>
+        <td><%= users[i].gender %></td>
+        <td><%= users[i].status %></td>
         <td>
             <a href=" <%= "/users/view-user/" + users[i].id %> "><button type="submit" id="viewBtn" class="btn btn-primary mr-1">View</button></a>
             <a href=" <%= "/users/update-user/" + users[i].id %> "><button type="submit" id="editBtn" class="btn btn-primary btn-dark mr-1">Edit</button></a>
