authentication addition part 1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,8 @@
 <div class="Container text-center">
 
     <p>Please select the desired action from options given below:</p>
-    <a href="/users"><button type="submit" id="userBtn" class="btn btn-primary">USERS INVENTORY</button></a><p></p>
-    <button type="submit" id="etcBtn" class="btn btn-primary">ETC INVENTORY...</button>
+    <a href="/login"><button class="btn btn-primary">LOGIN</button></a><p></p>
+    <a href="/signup"><button class="btn btn-primary">SIGNUP</button></a><p></p>
 
 </div>
 
