--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -7,7 +7,7 @@
         <h1>WELCOME</h1>
         <h3>--- SIGN UP PAGE ---</h3>
 
-        <a href="/login"><button class="btn btn-primary">BACK</button></a>
+        <a href="/"><button class="btn btn-primary">BACK</button></a>
 
     </div>
 </div>
