incorporating auth in ejs files

--- a/views/include/_showData.ejs
+++ b/views/include/_showData.ejs
@@ -17,7 +17,7 @@
 
     <tr>
         <td><%= i + 1%></td>
-        <td><%= users[i].name %></td>
+        <td><%= users[i].firstName + " " + users[i].lastName %></td>
         <td><%= users[i].email %></td>
         <td><%= users[i].gender %></td>
         <td><%= users[i].status %></td>
