--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -12,12 +12,12 @@
     </div>
 </div>
 
-<div class="Container container-sm">
+<div class="Container container-sm text-center">
 
     <form action="/user-login" method="POST" id="login-user">
         <div class="new_user">
 
-            <%- include('include/_form')  %>
+            <%- include('include/_loginForm')  %>
 
         </div>
     </form>
