--- a/views/selectedUserInfo.ejs
+++ b/views/selectedUserInfo.ejs
@@ -20,7 +20,7 @@
 <div class="Container container-sm">
 
     <ol>
-        <li><%= user.name %></li>
+        <li><%= user.firstName + " " + user.lastName %></li>
         <li><%= user.email %></li>
         <li><%= user.gender %></li>
         <li><%= user.status %></li>
