--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,10 +20,11 @@ h3{
     background-color: #bcbcbc;
 }
 form{
-    width: 100%;
+    width: 150px;
     display: inline-block;
     margin: auto;
     padding: inherit;
+    text-align: right;
 }
 footer{
     margin-top: 3%;
@@ -71,9 +72,9 @@ form-title > h2{
     margin: .4em 0;
 }
 
-#add_user .form-group input[type="text"],
-#update_user .form-group input[type="text"]{
-    width: 100%;
+#add-user .form-group input[type="text"],
+#update-user .form-group input[type="text"]{
+    width: 20%;
     padding: .6em 1em;
     margin: .5em 0;
     border: 1px solid black;
@@ -82,8 +83,8 @@ form-title > h2{
     border-radius: .2em;
 }
 
-#add_user .form-group .radio,
-#update_user .form-group .radio{
+#add-user .form-group .radio,
+#update-user .form-group .radio{
     margin: 1em 2em;
 }
 
@@ -122,8 +123,8 @@ form-title > h2{
     background: white;
 }
 
-#add_user .form-group .btn,
-#update_user .form-group .btn{
+#add-user .form-group .btn,
+#update-user .form-group .btn{
     width: 100%;
     padding: .9em 1em;
     background-color: #3399ff;
