--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -1,11 +1,21 @@
 <div class="form-group">
-    <label for="name" class="text-bold">Name:</label>
-    <input type="text" id="name" name="name" value="<%= user.name %>" placeholder="John Wick">
+    <label for="firstName" class="text-bold">First Name:</label>
+    <input type="text" id="firstName" name="firstName" value="<%= user.firstName %>">
+</div>
+
+<div class="form-group">
+    <label for="lastName" class="text-bold">Last Name:</label>
+    <input type="text" id="lastName" name="lastName" value="<%= user.lastName %>">
 </div>
 
 <div class="form-group">
     <label for="email" class="text-bold">Email:</label>
-    <input type="email" id="email" name="email" value="<%= user.email %>" placeholder="example@gmail.com">
+    <input type="email" id="email" name="email" value="<%= user.email %>">
+</div>
+
+<div class="form-group">
+    <label for="password" class="text-bold">Password:</label>
+    <input type="text" id="password" name="password" value="<%= user.password %>">
 </div>
 
 <div class="form-group">
