--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -1,11 +1,21 @@
 <div class="form-group">
-    <label for="name" class="text-bold">Name:</label>
-    <input type="text" id="name" name="name" placeholder="John Wick">
+    <label for="firstName" class="text-bold">First Name:</label>
+    <input type="text" id="firstName" name="firstName" placeholder="John">
+</div>
+
+<div class="form-group">
+    <label for="lastName" class="text-bold">Last Name:</label>
+    <input type="text" id="lastName" name="lastName" placeholder="Wick">
 </div>
 
 <div class="form-group">
     <label for="email" class="text-bold">Email:</label>
     <input type="email" id="email" name="email" placeholder="example@gmail.com">
+</div>
+
+<div class="form-group">
+    <label for="password" class="text-bold">Password:</label>
+    <input type="text" id="password" name="password" placeholder="abc123">
 </div>
 
 <div class="form-group">
