fixed login/signup ejs files

--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -14,7 +14,7 @@
 
 <div class="Container container-sm text-center">
 
-    <form action="/user-login" method="POST" id="login-user">
+    <form action="/login" method="POST" id="user-login">
         <div class="new_user">
 
             <%- include('include/_loginForm')  %>
