--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -14,7 +14,7 @@
 
 <div class="Container container-sm">
 
-    <form action="/signup-user" method="POST" id="user-signup">
+    <form action="/signup" method="POST" id="user-signup">
         <div class="new_user">
 
             <%- include('include/_form')  %>
