--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -15,7 +15,7 @@
 
 <div class="form-group">
     <label for="password" class="text-bold">Password:</label>
-    <input type="text" id="password" name="password" value="<%= user.password %>">
+    <input type="text" id="password" name="password" value="">
 </div>
 
 <div class="form-group">
