--- a/views/usersInfoPage.ejs
+++ b/views/usersInfoPage.ejs
@@ -12,7 +12,7 @@
     <div class="Container container-sm text-center">
 
         <a href="/users/add-user"><button class="btn btn-primary">Add</button></a>
-        <a href="/"><button class="btn btn-primary">BACK</button></a>
+        <a href="/logout"><button class="btn btn-primary">LOGOUT</button></a>
 
     </div>
 </div>
