--- a/views/usersInfoPage.ejs
+++ b/views/usersInfoPage.ejs
@@ -11,8 +11,10 @@
 
     <div class="Container container-sm text-center">
 
-        <a href="/users/add-user"><button class="btn btn-primary">Add</button></a>
-        <a href="/logout"><button class="btn btn-primary">LOGOUT</button></a>
+        <a href="/users/add-user"><button class="btn btn-primary mb-2">Add</button></a>
+        <form action="/logout?_method=DELETE" method="POST">
+            <button type="submit" class="btn btn-primary">LOGOUT</button>
+        </form>
 
     </div>
 </div>
