--- a/views/confirmUserDeletion.ejs
+++ b/views/confirmUserDeletion.ejs
@@ -11,7 +11,7 @@
 
 <div class="Container text-center">
 
-    <form action=" <%= "/users/delete-user/" + user.id %> " method="POST">
+    <form action=" <%= "/users/delete-user/" + user.id + "?_method=DELETE"%> " method="POST">
 
         <p>Are you sure you want to delete <%= user.name %>?</p>
         <button type="submit" class="btn btn-primary mr-2 btn-danger" value="confirm">Confirm</button>
