--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -15,7 +15,7 @@
 
 <div class="form-group">
     <label for="password" class="text-bold">Password:</label>
-    <input type="text" id="password" name="password" placeholder="abc123">
+    <input type="password" id="password" name="password" placeholder="abc123">
 </div>
 
 <div class="form-group">
