--- a/views/selectedUserInfo.ejs
+++ b/views/selectedUserInfo.ejs
@@ -24,6 +24,7 @@
         <li>Email: <%= user.email %></li>
         <li>Gender: <%= user.gender %></li>
         <li>Status: <%= user.status %></li>
+        <li>Role: <%= user.role %></li>
     </ol>
 
 </div>
