--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -42,5 +42,17 @@
     </div>
 </div>
 
+<div class="form-group">
+    <label for="role" class="text-bold">Role:</label>
+    <div class="radio inline">
+        <input type="radio" id="radio-3" name="role" value="Admin">
+        <label for="radio-3" class="radio-label">Admin</label>
+    </div>
+    <div class="radio inline">
+        <input type="radio" id="radio-4" name="role" value="User">
+        <label for="radio-4" class="radio-label">User</label>
+    </div>
+</div>
+
 <input type="submit" class="btn btn-primary" value="SUBMIT">
 <input type="reset" class="btn btn-primary" value="RESET">
