adding role function

--- a/views/usersInfoPage.ejs
+++ b/views/usersInfoPage.ejs
@@ -17,6 +17,11 @@
         </form>
 
     </div>
+
+    <% if (errorMessage) {%>
+        <div class="error-message"><%= errorMessage %></div>
+    <% } %>
+
 </div>
 
 <div class="Container container-sm text-center">
