--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -15,7 +15,7 @@
 
 <div class="form-group">
     <label for="password" class="text-bold">Password:</label>
-    <input type="text" id="password" name="password" value="">
+    <input type="password" id="password" name="password" value="">
 </div>
 
 <div class="form-group">
@@ -45,11 +45,11 @@
 <div class="form-group">
     <label for="role" class="text-bold">Role:</label>
     <div class="radio inline">
-        <input type="radio" id="radio-5" name="role" value="Admin" <%= user.status === 'Admin' ? 'checked' : ''%> >
+        <input type="radio" id="radio-5" name="role" value="admin" <%= user.role === 'admin' ? 'checked' : ''%> >
         <label for="radio-5" class="radio-label">Admin</label>
     </div>
     <div class="radio inline">
-        <input type="radio" id="radio-6" name="role" value="User" <%= user.status === 'User' ? 'checked' : ''%> >
+        <input type="radio" id="radio-6" name="role" value="user" <%= user.role === 'user' ? 'checked' : ''%> >
         <label for="radio-6" class="radio-label">User</label>
     </div>
 </div>
