--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -17,7 +17,7 @@
     <form action="/signup" method="POST" id="user-signup">
         <div class="new_user">
 
-            <%- include('include/_form')  %>
+            <%- include('include/_signUpForm')  %>
 
         </div>
     </form>
