--- a/views/addNewUser.ejs
+++ b/views/addNewUser.ejs
@@ -7,14 +7,14 @@
         <h1>WELCOME</h1>
         <h3>--- ADDING A NEW USER ---</h3>
 
-        <a href="<% "/users/" + user.id %>"><button class="btn btn-primary">BACK</button></a>
+        <a href="/users"><button class="btn btn-primary">BACK</button></a>
 
     </div>
 </div>
 
 <div class="Container container-sm">
 
-    <form action=" <% "/users/add-user/" + user.id %>" method="POST" id="add-user">
+    <form action=/users/add-user/" method="POST" id="add-user">
         <div class="new_user">
 
         <%- include('include/_form')  %>
