authentication function completed

--- a/views/addNewUser.ejs
+++ b/views/addNewUser.ejs
@@ -14,7 +14,7 @@
 
 <div class="Container container-sm">
 
-    <form action=/users/add-user/" method="POST" id="add-user">
+    <form action="/users/add-user/" method="POST" id="add-user">
         <div class="new_user">
 
         <%- include('include/_form')  %>
