--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -1,14 +1,18 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+        integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer">
+</script>
 <script src="./assets/js/index.js"></script>
 
 </body>
-<footer>
+<!--<footer>-->
 
-    <div class="jumbotron text-center">
-        <p>Author: Talha Rauf</p>
-        <p><a href="https://github.com/Talha-Rauf">--> GitHub Link <--</a></p>
-        <p>...</p>
-    </div>
+<!--    <div class="jumbotron text-center">-->
+<!--        <p>Author: Talha Rauf</p>-->
+<!--        <p><a href="https://github.com/Talha-Rauf">&ndash;&gt; GitHub Link <&#45;&#45;</a></p>-->
+<!--        <p>...</p>-->
+<!--    </div>-->
 
-</footer>
+<!--</footer>-->
 </html>
