--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -1,44 +1,75 @@
 
-<%- include('include/_header') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+    <meta charset="utf-8">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"><meta charset="utf-8">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/> <!-- Font Awesome -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/> <!-- Google Fonts -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/> <!-- MDB -->
+    <link href="./assets/css/index.css" rel="stylesheet" type="text/css"/>
+
+</head>
+<body>
 
 <section class="myForm">
-    <div class="mask d-flex align-items-center h-100" style="background-color: rgba(255,255,255,.6);">
-        <div class="Container">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card gradient-custom" style="border-radius: 1rem;">
-                        <div class="card-body p-5 text-center">
-                            <div class="my-md-5">
+<!--    <div class="bg-image h-100" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.webp');">-->
+        <div class="mask d-flex align-items-center h-100" style="background-color: rgba(255,255,255,.6);">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                        <div class="card gradient-custom" style="border-radius: 1rem; background: linear-gradient(to bottom, rgba(29,51,199,0.45), rgba(140,35,210,0.7));">
+                            <div class="card-body p-5 text-center">
+                                <div class="my-md-5">
 
-                                <form action="/login" method="POST" id="user-login">
-
-                                    <!--In case of wrong username or password, error msg will appear-->
-                                    <% if (errorMessage) {%>
-                                        <%= errorMessage %>
-                                    <% } %>
-
-                                    <div class="form-outline form-white mb-4">
-                                        <input id="email" type="email" class="form-control form-control-lg" name="email">
-                                        <label for="email" class="form-label">Email</label>
+                                    <div class="text-center pt-1">
+                                        <i class="fas fa-user-tie text-white fa-4x"></i>
+                                        <h1 class="fw-bold my-5 text-white text-uppercase">log in</h1>
                                     </div>
 
-                                    <div class="form-outline form-white mb-4">
-                                        <input id="password" type="password" class="form-control form-control-lg" name="password">
-                                        <label for="password" class="form-label">Password</label>
-                                    </div>
+                                    <form action="/login" method="POST" id="user-login">
+
+                                        <!--In case of wrong username or password, error msg will appear-->
+                                        <% if (errorMessage) {%>
+                                            <%= errorMessage %>
+                                        <% } %>
+
+                                        <div class="form-outline form-white mb-4">
+                                            <input id="typeEmail" type="email" class="form-control form-control-lg" name="email">
+                                            <label for="typeEmail" class="form-label">Email</label>
+                                        </div>
+
+                                        <div class="form-outline form-white mb-4">
+                                            <input id="typePassword" type="password" class="form-control form-control-lg" name="password">
+                                            <label for="typePassword" class="form-label">Password</label>
+                                        </div>
 
 
-                                    <button class="btn btn-light btn-lg btn-rounded px-5" type="submit">LOGIN</button>
-                                    <a href="/"><button class="btn btn-light btn-lg btn-rounded px-5" type="button">BACK</button></a>
+                                        <button class="btn btn-light btn-lg btn-rounded px-5" type="submit">LOGIN</button>
+                                        <a href="/"><button class="btn btn-light btn-lg btn-rounded px-5" type="button">BACK</button></a>
 
-                                </form>
+                                    </form>
 
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+<!--    </div>-->
 </section>
 
+</body>
+<!--<footer>-->
+
+<!--    <div class="jumbotron text-center">-->
+<!--        <p>Author: Talha Rauf</p>-->
+<!--        <p><a href="https://github.com/Talha-Rauf">&ndash;&gt; GitHub Link <&#45;&#45;</a></p>-->
+<!--        <p>...</p>-->
+<!--    </div>-->
+
+<!--</footer>-->
+</html>
