mdboostrap styling for login/signup

--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -4,6 +4,7 @@
         referrerpolicy="no-referrer">
 </script>
 <script src="./assets/js/index.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
 
 </body>
 <!--<footer>-->
