--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,30 @@
 
 <%- include('include/_header') %>
 
-<div class="jumbotron">
-    <div class="container text-center">
+<section class="myForm">
+    <div class="mask bg-dark d-flex align-items-center h-100">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card gradient-custom" style="border-radius: 1rem; background: linear-gradient(to bottom, rgba(50,69,231,0.66), rgba(155,42,232,0.74));">
+                        <div class="card-body p-5 text-center">
+                            <div class="my-md-1">
 
-        <h1>WELCOME</h1>
-        <h3>--- HOME PAGE ---</h3>
+                                <div class="text-center pt-1">
+                                    <i class="fas fa-house text-white fa-4x"></i>
+                                    <h1 class="fw-bold my-5 text-white text-uppercase">HOME PAGE</h1>
+                                </div>
 
+                                <a href="/login"><button class="btn btn-light btn-lg btn-rounded px-5">LOGIN</button></a><p></p>
+                                <a href="/signup"><button class="btn btn-light btn-lg btn-rounded px-5">SIGNUP</button></a><p></p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-
-<div class="Container text-center">
-
-    <p>Please select the desired action from options given below:</p>
-    <a href="/login"><button class="btn btn-primary">LOGIN</button></a><p></p>
-    <a href="/signup"><button class="btn btn-primary">SIGNUP</button></a><p></p>
-
-</div>
+</section>
 
 <%- include('include/_footer') %>
