--- a/views/editUserInfo.ejs
+++ b/views/editUserInfo.ejs
@@ -1,28 +1,32 @@
 
 <%- include('include/_header') %>
 
-<div class="jumbotron">
-    <div class="container text-center">
+<section class="myForm">
+    <div class="mask bg-dark d-flex align-items-center h-100">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card gradient-custom" style="border-radius: 1rem; background: linear-gradient(to bottom, rgba(50,69,231,0.66), rgba(155,42,232,0.74));">
+                        <div class="card-body p-5 text-center">
+                            <div class="my-md-5">
 
-        <h1>WELCOME</h1>
-        <h3>--- EDIT SELECTED USER ---</h3>
+                                <div class="text-center pt-1">
+                                    <h1 class="fw-bold my-3 text-white text-uppercase">edit profile</h1>
+                                </div>
 
-        <a href="/users"><button class="btn btn-primary">BACK</button></a>
+                                <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
 
+                                    <%- include('include/_editForm', {data: 'user'}); %>
+
+                                </form>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-
-<div class="Container container-sm">
-
-    <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
-
-        <%- include('include/_editForm', {data: 'user'}); %>
-
-        <input type="submit" class="btn btn-primary" value="SUBMIT">
-        <input type="reset" class="btn btn-primary" value="RESET">
-
-    </form>
-
-</div>
+</section>
 
 <%- include('include/_footer') %>
