--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -1,55 +1,79 @@
-<div class="form-group">
-    <label for="firstName" class="text-bold">First Name:</label>
-    <input type="text" id="firstName" name="firstName" value="<%= user.firstName %>">
+<div class="form-outline form-white mb-4">
+    <input type="text" id="firstName" class="form-control form-control-md" name="firstName" value="<%= user.firstName %>" required>
+    <label for="firstName" class="form-label">First Name</label>
 </div>
 
-<div class="form-group">
-    <label for="lastName" class="text-bold">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" value="<%= user.lastName %>">
+<div class="form-outline form-white mb-4">
+    <input type="text" id="lastName" class="form-control form-control-md" name="lastName" value="<%= user.lastName %>" required>
+    <label for="lastName" class="form-label">Last Name</label>
 </div>
 
-<div class="form-group">
-    <label for="email" class="text-bold">Email:</label>
-    <input type="email" id="email" name="email" value="<%= user.email %>">
+<div class="form-outline form-white mb-4">
+    <input id="typeEmail" type="email" class="form-control form-control-md" name="email" value="<%= user.email %>" required>
+    <label for="typeEmail" class="form-label">Email</label>
 </div>
 
-<div class="form-group">
-    <label for="password" class="text-bold">Password:</label>
-    <input type="password" id="password" name="password" value="">
+<div class="form-outline form-white mb-4">
+    <input id="typePassword" type="password" class="form-control form-control-md" name="password" value="" required>
+    <label for="typePassword" class="form-label">Password</label>
 </div>
 
-<div class="form-group">
-    <label for="gender" class="text-bold">Gender:</label>
-    <div class="radio inline">
-        <input type="radio" id="radio-1" name="gender" value="Male" <%= user.gender === 'Male' ? 'checked' : ''%> >
-        <label for="radio-1" class="radio-label">Male</label>
+<div class="form-group form-white">
+    <label for="gender" class="text-uppercase text-white">Gender</label><br>
+
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" value="Male" name="gender" id="radio1" <%= user.gender === 'Male' ? 'checked' : ''%>>
+        <label class="form-check-label text-white" for="radio1">
+            Male
+        </label>
     </div>
-    <div class="radio inline">
-        <input type="radio" id="radio-2" name="gender" value="Female" <%= user.gender === 'Female' ? 'checked' : ''%> >
-        <label for="radio-2" class="radio-label">Female</label>
+
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" value="Male" name="gender" id="radio2" <%= user.gender === 'Female' ? 'checked' : ''%>>
+        <label class="form-check-label text-white" for="radio2">
+            Female
+        </label>
     </div>
+
 </div>
 
-<div class="form-group">
-    <label for="status" class="text-bold">Status:</label>
-    <div class="radio inline">
-        <input type="radio" id="radio-3" name="status" value="Employed" <%= user.status === 'Employed' ? 'checked' : ''%> >
-        <label for="radio-3" class="radio-label">Employed</label>
+<div class="form-group form-white">
+    <label for="status" class="text-uppercase text-white">Status</label><br>
+
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" value="Employed" name="status" id="radio3" <%= user.status === 'Employed' ? 'checked' : ''%>>
+        <label class="form-check-label text-white" for="radio3">
+            Employed
+        </label>
     </div>
-    <div class="radio inline">
-        <input type="radio" id="radio-4" name="status" value="Unemployed" <%= user.status === 'Unemployed' ? 'checked' : ''%> >
-        <label for="radio-4" class="radio-label">Unemployed</label>
+
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" value="Unemployed" name="status" id="radio4" <%= user.status === 'Unemployed' ? 'checked' : ''%>>
+        <label class="form-check-label text-white" for="radio4">
+            Unemployed
+        </label>
     </div>
+
 </div>
 
-<div class="form-group">
-    <label for="role" class="text-bold">Role:</label>
-    <div class="radio inline">
-        <input type="radio" id="radio-5" name="role" value="admin" <%= user.role === 'admin' ? 'checked' : ''%> >
-        <label for="radio-5" class="radio-label">Admin</label>
+<div class="form-group form-white">
+    <label for="role" class="text-uppercase text-white">Status</label><br>
+
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" value="Admin" name="role" id="radio5" <%= user.role === 'admin' ? 'checked' : ''%>>
+        <label class="form-check-label text-white" for="radio5">
+            Admin
+        </label>
     </div>
-    <div class="radio inline">
-        <input type="radio" id="radio-6" name="role" value="user" <%= user.role === 'user' ? 'checked' : ''%> >
-        <label for="radio-6" class="radio-label">User</label>
+
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" value="User" name="role" id="radio6" <%= user.role === 'user' ? 'checked' : ''%>>
+        <label class="form-check-label text-white" for="radio6">
+            User
+        </label>
     </div>
+
 </div>
+
+<button class="btn btn-light btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
+<a href="/users"><button class="btn btn-light btn-lg btn-rounded px-5" type="button">BACK</button></a>
