--- a/views/include/_loginForm.ejs
+++ b/views/include/_loginForm.ejs
@@ -14,5 +14,5 @@
 </div>
 
 
-<button class="btn btn-light btn-lg btn-rounded px-5" type="submit">LOGIN</button>
+<button class="btn btn-light btn-lg btn-rounded px-5 mr-3" type="submit">LOGIN</button>
 <a href="/"><button class="btn btn-light btn-lg btn-rounded px-5" type="button">BACK</button></a>
