--- a/views/include/_signUpForm.ejs
+++ b/views/include/_signUpForm.ejs
@@ -56,5 +56,5 @@
 
 </div>
 
-<button class="btn btn-light btn-lg btn-rounded px-5" type="submit">SUBMIT</button>
+<button class="btn btn-light btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
 <a href="/"><button class="btn btn-light btn-lg btn-rounded px-5" type="button">BACK</button></a>
