--- a/views/include/_loginForm.ejs
+++ b/views/include/_loginForm.ejs
@@ -3,16 +3,16 @@
     <%= errorMessage %>
 <% } %>
 
-<div class="form-outline form-white mb-4">
-    <input id="typeEmail" type="email" class="form-control form-control-lg" name="email">
+<div class="form-outline mb-4">
+    <input id="typeEmail" type="email" class="form-control" name="email">
     <label for="typeEmail" class="form-label">Email</label>
 </div>
 
-<div class="form-outline form-white mb-4">
-    <input id="typePassword" type="password" class="form-control form-control-lg" name="password">
+<div class="form-outline mb-4">
+    <input id="typePassword" type="password" class="form-control" name="password">
     <label for="typePassword" class="form-label">Password</label>
 </div>
 
 
-<button class="btn btn-light btn-lg btn-rounded px-5 mr-3" type="submit">LOGIN</button>
-<a href="/"><button class="btn btn-light btn-lg btn-rounded px-5" type="button">BACK</button></a>
+<button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">LOGIN</button>
+<a href="/"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
