--- a/views/include/_usersTable.ejs
+++ b/views/include/_usersTable.ejs
@@ -1,44 +1,38 @@
-<section class="myTable">
-    <div class="gradient-custom-2 h-100">
-        <div class="mask d-flex align-items-center mt-5 h-100 bg-gradient-primary">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12">
-                        <div class="table-responsive">
-                            <table class="table table-dark table-bordered mb-0">
-                                <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th scope="col">NAME/USERS</th>
-                                    <th scope="col">EMAIL</th>
-                                    <th scope="col">GENDER</th>
-                                    <th scope="col">STATUS</th>
-                                    <th scope="col">ACTION</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <% for (var i = 0; i < users.length; i++) { %>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <div class="table-responsive">
+                <table class="table table-white align-middle bg-white table-bordered mb-0">
+                    <thead class="bg-dark-subtle">
+                    <tr>
+                        <th>#</th>
+                        <th scope="col">NAME/USERS</th>
+                        <th scope="col">EMAIL</th>
+                        <th scope="col">GENDER</th>
+                        <th scope="col">STATUS</th>
+                        <th scope="col">ACTION</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <% for (var i = 0; i < users.length; i++) { %>
 
-                                    <tr>
-                                        <th scope="row"><%= i + 1%></th>
-                                        <td><%= users[i].firstName + " " + users[i].lastName %></td>
-                                        <td><%= users[i].email %></td>
-                                        <td><%= users[i].gender %></td>
-                                        <td><%= users[i].status %></td>
-                                        <td>
-                                            <a href=" <%= "/users/view-user/" + users[i].id %> "><button type="button" class="btn btn-primary mr-1">View</button></a>
-                                            <a href=" <%= "/users/update-user/" + users[i].id %> "><button type="button" class="btn btn-primary btn-success mr-1">Edit</button></a>
-                                            <a href=" <%= "/users/delete-user/" + users[i].id %> "><button type="button" class="btn btn-primary btn-danger">Delete</button></a>
-                                        </td>
-                                    </tr>
+                        <tr>
+                            <th scope="row"><%= i + 1%></th>
+                            <td><%= users[i].firstName + " " + users[i].lastName %></td>
+                            <td><%= users[i].email %></td>
+                            <td><%= users[i].gender %></td>
+                            <td><%= users[i].status %></td>
+                            <td>
+                                <a href=" <%= "/users/view-user/" + users[i].id %> "><button type="button" class="btn btn-primary mr-1">View</button></a>
+                                <a href=" <%= "/users/update-user/" + users[i].id %> "><button type="button" class="btn btn-primary btn-success mr-1">Edit</button></a>
+                                <a href=" <%= "/users/delete-user/" + users[i].id %> "><button type="button" class="btn btn-primary btn-danger">Delete</button></a>
+                            </td>
+                        </tr>
 
-                                <% } %>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                    <% } %>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-</section>
+</div>
