--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,33 @@
 
 <%- include('include/_header') %>
 
-<section class="myForm">
-    <div class="mask bg-dark d-flex align-items-center h-100">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card gradient-custom" style="border-radius: 1rem; background: linear-gradient(to bottom, rgba(50,69,231,0.66), rgba(155,42,232,0.74));">
-                        <div class="card-body p-5 text-center">
-                            <div class="my-md-1">
+<section class="text-center">
+    <!-- Background image -->
+    <div class="p-5 bg-image" style="
+        background-image: url('https://mdbootstrap.com/img/new/textures/full/252.jpg');
+        height: 300px;
+        "></div>
+    <!-- Background image -->
 
-                                <div class="text-center pt-1">
-                                    <i class="fas fa-house text-white fa-4x"></i>
-                                    <h1 class="fw-bold my-5 text-white text-uppercase">HOME PAGE</h1>
-                                </div>
+    <div class="container container-sm">
+        <div class="card mx-4 mx-md-5 shadow-5-strong"
+             style="
+             margin-top: -100px;
+             background: hsla(0, 0%, 100%, 0.8);
+             backdrop-filter: blur(30px);">
 
-                                <a href="/login"><button class="btn btn-light btn-lg btn-rounded px-5">LOGIN</button></a><p></p>
-                                <a href="/signup"><button class="btn btn-light btn-lg btn-rounded px-5">SIGNUP</button></a><p></p>
+            <div class="card-body py-5 px-md-5">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-lg-8">
+                        <h2 class="fw-bold mb-5">HOMEPAGE</h2>
 
-                            </div>
-                        </div>
+                        <a href="/login"><button class="btn btn-dark btn-lg btn-rounded px-5">LOGIN</button></a><p></p>
+                        <a href="/signup"><button class="btn btn-dark btn-lg btn-rounded px-5">SIGNUP</button></a><p></p>
+
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
