--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -1,32 +1,35 @@
 <%- include('include/_header') %>
 
-<section class="myForm">
-    <div class="mask bg-dark d-flex align-items-center h-100">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                        <div class="card gradient-custom" style="border-radius: 1rem; background: linear-gradient(to bottom, rgba(50,69,231,0.66), rgba(155,42,232,0.74));">
-                            <div class="card-body p-5 text-center">
-                                <div class="my-md-1">
+<section class="text-center">
+    <!-- Background image -->
+    <div class="p-5 bg-image" style="
+        background-image: url('https://mdbootstrap.com/img/new/textures/full/252.jpg');
+        height: 300px;
+        "></div>
+    <!-- Background image -->
+    <div class="container container-sm">
+        <div class="card mx-4 mx-md-5 shadow-5-strong"
+             style="
+             margin-top: -100px;
+             background: hsla(0, 0%, 100%, 0.8);
+             backdrop-filter: blur(30px);">
 
-                                    <div class="text-center pt-1">
-                                        <i class="fas fa-user-tie text-white fa-4x"></i>
-                                        <h1 class="fw-bold my-5 text-white text-uppercase">log in</h1>
-                                    </div>
+            <div class="card-body py-5 px-md-5">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-lg-8">
+                        <h2 class="fw-bold mb-5">LOGIN</h2>
 
-                                    <form action="/login" method="POST" id="user-login">
+                        <form action="/login" method="POST" id="user-login">
 
-                                        <%- include('include/_loginForm') %>
+                            <%- include('include/_loginForm') %>
 
-                                    </form>
+                        </form>
 
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 <%- include('include/_footer') %>
